[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/NOTE_assets/arrowLEFT0000.png" type="Texture" id=1]
[ext_resource path="res://assets/images/NOTE_assets/purple0000.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/FNF Text.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/coolpixelfontlol.tres" type="DynamicFontData" id=4]
[ext_resource path="res://assets/scenes/Control Options.gd" type="Script" id=5]
[ext_resource path="res://assets/scenes/Control Item.gd" type="Script" id=6]
[ext_resource path="res://assets/images/NOTE_assets/arrowDOWN0000.png" type="Texture" id=7]
[ext_resource path="res://assets/images/NOTE_assets/arrowUP0000.png" type="Texture" id=8]
[ext_resource path="res://assets/images/NOTE_assets/blue0000.png" type="Texture" id=9]
[ext_resource path="res://assets/images/NOTE_assets/green0000.png" type="Texture" id=10]
[ext_resource path="res://assets/images/NOTE_assets/red0000.png" type="Texture" id=11]
[ext_resource path="res://assets/images/NOTE_assets/arrowRIGHT0000.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Control Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
left_control = NodePath("CenterContainer/VBoxContainer/Left Control Item")
down_control = NodePath("CenterContainer/VBoxContainer/Down Control Item")
up_control = NodePath("CenterContainer/VBoxContainer/Up Control Item")
right_control = NodePath("CenterContainer/VBoxContainer/Right Control Item")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 791.0
margin_top = 396.0
margin_right = 1128.0
margin_bottom = 684.0

[node name="Left Control Item" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 337.0
margin_bottom = 67.0
focus_neighbour_top = NodePath("../Right Control Item")
focus_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
focused_texture = ExtResource( 2 )
unfocused_texture = ExtResource( 1 )
control_text = "Left"
control_action = "note_left"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/Left Control Item"]
margin_right = 80.0
margin_bottom = 67.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="FNF Text" parent="CenterContainer/VBoxContainer/Left Control Item" instance=ExtResource( 3 )]
margin_left = 84.0
margin_right = 267.0
margin_bottom = 67.0
rect_min_size = Vector2( 183, 67 )
text = "left"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Left Control Item"]
margin_left = 271.0
margin_right = 271.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )

[node name="Down Control Item" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 337.0
margin_bottom = 140.0
focus_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
focused_texture = ExtResource( 9 )
unfocused_texture = ExtResource( 7 )
control_text = "Down"
control_action = "note_down"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/Down Control Item"]
margin_right = 80.0
margin_bottom = 69.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="FNF Text" parent="CenterContainer/VBoxContainer/Down Control Item" instance=ExtResource( 3 )]
margin_left = 84.0
margin_right = 302.0
margin_bottom = 69.0
rect_min_size = Vector2( 218, 69 )
text = "down"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Down Control Item"]
margin_left = 306.0
margin_top = 1.0
margin_right = 306.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )

[node name="Up Control Item" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 337.0
margin_bottom = 214.0
focus_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
focused_texture = ExtResource( 10 )
unfocused_texture = ExtResource( 8 )
control_text = "Up"
control_action = "note_up"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/Up Control Item"]
margin_right = 80.0
margin_bottom = 70.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="FNF Text" parent="CenterContainer/VBoxContainer/Up Control Item" instance=ExtResource( 3 )]
margin_left = 84.0
margin_right = 178.0
margin_bottom = 70.0
rect_min_size = Vector2( 94, 70 )
text = "UP"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Up Control Item"]
margin_left = 182.0
margin_top = 2.0
margin_right = 182.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )

[node name="Right Control Item" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 337.0
margin_bottom = 288.0
focus_neighbour_bottom = NodePath("../Left Control Item")
focus_mode = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
focused_texture = ExtResource( 11 )
unfocused_texture = ExtResource( 12 )
control_text = "Right"
control_action = "note_right"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/Right Control Item"]
margin_right = 80.0
margin_bottom = 70.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="FNF Text" parent="CenterContainer/VBoxContainer/Right Control Item" instance=ExtResource( 3 )]
margin_left = 84.0
margin_right = 333.0
margin_bottom = 70.0
rect_min_size = Vector2( 249, 70 )
text = "right"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Right Control Item"]
margin_left = 337.0
margin_top = 2.0
margin_right = 337.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Select Control: Up/Down
Change Control: Enter
Exit: Escape
Changes will be saved automatically"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Left Control Item" to="." method="_on_Left_Control_Item_focus_entered"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Left Control Item" to="." method="_on_HBoxContainer_focus_entered"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Down Control Item" to="." method="_on_HBoxContainer_focus_entered"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Down Control Item" to="." method="_on_Down_Control_Item_focus_entered"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Up Control Item" to="." method="_on_Up_Control_Item_focus_entered"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Up Control Item" to="." method="_on_HBoxContainer_focus_entered"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Right Control Item" to="." method="_on_HBoxContainer_focus_entered"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Right Control Item" to="." method="_on_Right_Control_Item_focus_entered"]
